--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ a {
     color: inherit;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 .main {
     position: fixed;
     top: 50%;
@@ -73,20 +77,16 @@ a {
 .bottom-nav .left * {
     display: inline-block;
     margin: 0px 0px 0px 10px;
-    margin-bottom: -30px;
+    /* why am I having to do this manually? */
+    margin-top: 10px;
 }
 
 .bottom-nav .right {
     float: right;
-    /* margin: 0px 10px 1px 0px; */
     margin-right: 15px;
 }
 
 .bottom-nav .right * {
     display: inline-block;
     margin: 10px;
-    }
-
-    .test{
-        display: inline-block;
     }
